[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Tiles.tres" type="TileSet" id=2]
[ext_resource path="res://TileMap.gd" type="Script" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI+SFX/wild-bandit.regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://UI+SFX/BGM.wav" type="AudioStream" id=7]
[ext_resource path="res://UI+SFX/GameOver.wav" type="AudioStream" id=8]
[ext_resource path="res://UI+SFX/Pellet.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 65536, 3, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 3, 0, 131072, 3, 0, 131073, 1, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 1, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 1, 0, 131091, 3, 0, 196608, 3, 0, 196609, 1, 0, 196610, 3, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 2, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 2, 0, 196625, 3, 0, 196626, 1, 0, 196627, 3, 0, 262144, 3, 0, 262145, 1, 0, 262146, 3, 0, 262147, 1, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 3, 0, 262159, 3, 0, 262160, 1, 0, 262161, 3, 0, 262162, 1, 0, 262163, 3, 0, 327680, 3, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 3, 0, 327685, 3, 0, 327686, 1, 0, 327687, 1, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 1, 0, 327693, 1, 0, 327694, 3, 0, 327695, 3, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 3, 0, 393216, 3, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 3, 0, 393221, 1, 0, 393222, 1, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 1, 0, 393230, 1, 0, 393231, 3, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 3, 0, 458752, 3, 0, 458753, 1, 0, 458754, 3, 0, 458755, 1, 0, 458756, 3, 0, 458757, 1, 0, 458758, 1, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 1, 0, 458766, 1, 0, 458767, 3, 0, 458768, 1, 0, 458769, 3, 0, 458770, 1, 0, 458771, 3, 0, 524288, 3, 0, 524289, 1, 0, 524290, 3, 0, 524291, 1, 0, 524292, 3, 0, 524293, 1, 0, 524294, 1, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 1, 0, 524302, 1, 0, 524303, 3, 0, 524304, 1, 0, 524305, 3, 0, 524306, 1, 0, 524307, 3, 0, 589824, 3, 0, 589825, 1, 0, 589826, 3, 0, 589827, 1, 0, 589828, 3, 0, 589829, 1, 0, 589830, 1, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 1, 0, 589838, 1, 0, 589839, 3, 0, 589840, 1, 0, 589841, 3, 0, 589842, 1, 0, 589843, 3, 0, 655360, 3, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 3, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 1, 0, 655374, 1, 0, 655375, 3, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 3, 0, 720896, 3, 0, 720897, 1, 0, 720898, 3, 0, 720899, 1, 0, 720900, 3, 0, 720901, 3, 0, 720902, 1, 0, 720903, 3, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 3, 0, 720909, 1, 0, 720910, 3, 0, 720911, 3, 0, 720912, 1, 0, 720913, 3, 0, 720914, 1, 0, 720915, 3, 0, 786432, 3, 0, 786433, 1, 0, 786434, 3, 0, 786435, 1, 0, 786436, 3, 0, 786437, 3, 0, 786438, 1, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 1, 0, 786446, 3, 0, 786447, 3, 0, 786448, 1, 0, 786449, 3, 0, 786450, 1, 0, 786451, 3, 0, 851968, 3, 0, 851969, 1, 0, 851970, 3, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 0, 0, 851978, 0, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 3, 0, 851986, 1, 0, 851987, 3, 0, 917504, 3, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 3, 0, 983040, 3, 0, 983041, 1, 0, 983042, 3, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 3, 0, 983058, 1, 0, 983059, 3, 0, 1048576, 3, 0, 1048577, 1, 0, 1048578, 3, 0, 1048579, 1, 0, 1048580, 3, 0, 1048581, 1, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 1, 0, 1048591, 3, 0, 1048592, 1, 0, 1048593, 3, 0, 1048594, 1, 0, 1048595, 3, 0, 1114112, 3, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 3, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 0, 0, 1114120, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 0, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 3, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 3, 0, 1179648, 3, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 3, 0, 1179653, 3, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 3, 0, 1245184, 3, 0, 1245185, 1, 0, 1245186, 3, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 1, 0, 1245201, 3, 0, 1245202, 1, 0, 1245203, 3, 0, 1310720, 3, 0, 1310721, 1, 0, 1310722, 3, 0, 1310723, 3, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 3, 0, 1310730, 3, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 3, 0, 1310737, 3, 0, 1310738, 1, 0, 1310739, 3, 0, 1376256, 3, 0, 1376257, 1, 0, 1376258, 3, 0, 1376259, 3, 0, 1376260, 2, 0, 1376261, 3, 0, 1376262, 3, 0, 1376263, 3, 0, 1376264, 1, 0, 1376265, 3, 0, 1376266, 3, 0, 1376267, 1, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 2, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 1, 0, 1376275, 3, 0, 1441792, 3, 0, 1441793, 1, 0, 1441794, 3, 0, 1441795, 3, 0, 1441796, 1, 0, 1441797, 3, 0, 1441798, 3, 0, 1441799, 3, 0, 1441800, 1, 0, 1441801, 3, 0, 1441802, 3, 0, 1441803, 1, 0, 1441804, 3, 0, 1441805, 3, 0, 1441806, 3, 0, 1441807, 1, 0, 1441808, 3, 0, 1441809, 3, 0, 1441810, 1, 0, 1441811, 3, 0, 1507328, 3, 0, 1507329, 1, 0, 1507330, 1, 0, 1507331, 1, 0, 1507332, 1, 0, 1507333, 1, 0, 1507334, 1, 0, 1507335, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1507338, 1, 0, 1507339, 1, 0, 1507340, 1, 0, 1507341, 1, 0, 1507342, 1, 0, 1507343, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 1, 0, 1507347, 3, 0, 1572864, 3, 0, 1572865, 3, 0, 1572866, 3, 0, 1572867, 3, 0, 1572868, 3, 0, 1572869, 3, 0, 1572870, 3, 0, 1572871, 3, 0, 1572872, 3, 0, 1572873, 3, 0, 1572874, 3, 0, 1572875, 3, 0, 1572876, 3, 0, 1572877, 3, 0, 1572878, 3, 0, 1572879, 3, 0, 1572880, 3, 0, 1572881, 3, 0, 1572882, 3, 0, 1572883, 3, 0 )
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 243.11, 257.109 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 455.567, 170.915 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Win" type="Label" parent="UI"]
margin_left = 138.804
margin_top = 219.079
margin_right = 352.804
margin_bottom = 259.079
custom_fonts/font = SubResource( 1 )
text = "Clamtastic Work!"

[node name="Lose" type="Label" parent="UI"]
margin_left = 62.6514
margin_top = 238.771
margin_right = 419.651
margin_bottom = 321.771
custom_fonts/font = SubResource( 1 )
text = "Not a good day for clamkind
Pellets Left:"
align = 1

[node name="Restart" type="Button" parent="UI"]
margin_left = 206.0
margin_top = 364.0
margin_right = 271.0
margin_bottom = 384.0
text = "RESTART"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
autoplay = true

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="PelletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0
[connection signal="Victory" from="Navigation2D/TileMap" to="." method="_on_TileMap_Victory"]
[connection signal="tree_exiting" from="Player" to="." method="_on_Player_tree_exiting"]
[connection signal="pressed" from="UI/Restart" to="." method="_on_Restart_pressed"]
